2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added addTorrentFile xml-rpc command which receives uploaded
	torrent file and add download for it.
	* src/RequestGroupMan.cc
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* src/download_helper.cc
	* src/download_helper.h
	
2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added remove xml-rpc command which removes specified download.
	There is a known issue: the removed unfinished downloads are
	reported ERR when aria2 exits. They should be reported as INPR.
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	
2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	If --enable-http-server is enabled, don't stop aria2 when all
	download finished and don't quit when no files to download at
	start up.
	* src/RequestGroupMan.cc
	* src/main.cc
	* src/option_processing.cc
	
2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added missing AM_CONDITIONAL
	* configure.ac
	
2009-05-08  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added xml-rpc functionality. Currently only addURI commad is
	supported. To enable xml-rpc, run aria2 with
	--enable-http-server. This option name is temporal and will be
	changed. The feature that reports download progress in html format
	is temporarily disabled.
	* src/HttpServer.cc
	* src/HttpServer.h
	* src/HttpServerBodyCommand.cc
	* src/HttpServerBodyCommand.h
	* src/HttpServerCommand.cc
	* src/HttpServerResponseCommand.cc
	* src/Makefile.am
	* src/OptionParser.cc
	* src/OptionParser.h
	* src/RequestGroupMan.cc
	* src/RequestGroupMan.h
	* src/XmlRpcMethod.cc
	* src/XmlRpcMethod.h
	* src/XmlRpcMethodFactory.cc
	* src/XmlRpcMethodFactory.h
	* src/XmlRpcMethodImpl.cc
	* src/XmlRpcMethodImpl.h
	* src/download_helper.cc
	* src/download_helper.h
	* test/Makefile.am
	* test/XmlRpcMethodTest.cc
