@@ -46,10 +46,12 @@ XmlRpcMethodFactory::create(const std::string& methodName)
 {
   if(methodName == "aria2.addURI") {
     return SharedHandle<XmlRpcMethod>(new AddURIXmlRpcMethod());
-  } else if(methodName == "aria2.addTorrent") {
+  } else if(methodName == "aria2.addTorrentFile") {
     return SharedHandle<XmlRpcMethod>(new AddTorrentFileXmlRpcMethod());
   } else if(methodName == "aria2.remove") {
     return SharedHandle<XmlRpcMethod>(new RemoveXmlRpcMethod());
+  } else if(methodName == "aria2.tellActiveStatus") {
+    return SharedHandle<XmlRpcMethod>(new TellActiveStatusXmlRpcMethod());
   } else {
     return SharedHandle<XmlRpcMethod>(new FailXmlRpcMethod());
   }
